# Ai-Dictionary

./: .pre-commit-config.yaml  CHANGELOG.md  README.md
.github/workflows/: run_workflow.yml
backend/: .gitignore  main.py  pyproject.toml  rule.md
backend/api/: note.txt
backend/core/: config.py  logging.py
backend/db/: client.py
backend/db/repository/: fetch_raw_data.py  insert_newsapi_data.py  posts_repo.py
backend/model/: note.txt
backend/services/: get_previous_days.py  note.txt
backend/services/authentication/: auth.py  dbs.py  users.py
backend/services/marktechpost_scraper/: mtp_scraper.py  test_mtp_scraper.py
backend/services/newsapi_scrapper/: news_api_fetcher.py  test_news_api_fetcher.py
backend/services/product_hunt_wrapper/: ph_wrapper.py  test_ph_wrapper.py
frontend/: biome.json  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: global-not-found.js  globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/blog/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: Contact-Button.tsx  Footer.tsx  Navbar.tsx  ThemeToggle.tsx  login-form.tsx  scroll-progress.tsx  signup-form.tsx  theme-provider.tsx
frontend/components/auth/: AuthContext.tsx
frontend/components/blocks/: block-renderer.tsx  code-block-client.tsx  code-block.tsx  (+7 more)
frontend/lib/: api.ts
frontend/types/: content.ts
langgraph_bot/: main.py  pyproject.toml  test_agent.py
langgraph_bot/agents/: agents.py  coding_agent.py  description_agent.py  summaryagent.py
langgraph_bot/agentschema/: stateschema.py
langgraph_bot/models/: generativemodel.py
langgraph_bot/nodes/: agentnode.py  load_data_node.py
langgraph_bot/nodes/anode/: agentnode.py
langgraph_bot/nodes/tnode/: description_tool_node.py  descrption_tool_node.py  title_node.py
langgraph_bot/tools/: tools.py
langgraph_bot/utils/: prompts.py
langgraph_bot/workflow/: description_workflow.py  workflow.py
supabase/: config.toml
supabase/migrations/: 20251214023227_initial_schema_setup.sql  20251214030543_add_row_level_security.sql  20260113133120_create_raw_api_data_table.sql
(+5 files in other folders)
